Add ts building

--- a/package.json
+++ b/package.json
@@ -1,6 +1,28 @@
 {
   "name": "echo-models",
   "version": "1.1.0",
-  "main": "src/index.ts",
-  "type": "module"
+  "description": "Shared TypeScript models for the ECHO app",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "type": "module",
+  "scripts": {
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
+    "prepublishOnly": "npm run build"
+  },
+  "files": [
+    "dist/**/*"
+  ],
+  "keywords": [
+    "typescript",
+    "models",
+    "echo",
+    "interfaces"
+  ],
+  "author": "ECHO Team",
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^5.0.0"
+  }
 }
